--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green">#11EA1A</color>
+    <color name="blue">#0C2FEF</color>
+    <color name="red">#F80C0C</color>
 </resources>
